logs/Slang/generated/hdlconv/hdlconvertor_p137_2.sv.log
name: hdlconvertor_p137_2
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137_2.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137_2.sv:1:1: error: language feature not yet supported
virtual class C#(parameter type T = logic, parameter SIZE = 1);
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137_2.sv:12:1: error: language feature not yet supported
C#(t_t0,3)::t_vector v0;
^~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137_2.sv:13:1: error: language feature not yet supported
C#(t_t0,3)::t_array a0;
^~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137_2.sv:14:1: error: language feature not yet supported
C#(bit,4)::t_struct s0;
^~~~~~~~~~~~~~~~~~~
